WebCore/loader/appcache/ApplicationCacheGroup.cpp
@@ -83,7 +83,11 @@ ApplicationCache* ApplicationCacheGroup::cacheForMainRequest(const ResourceReque
     if (!ApplicationCache::requestIsHTTPOrHTTPSGet(request))
         return 0;
 
-    if (ApplicationCacheGroup* group = cacheStorage().cacheGroupForURL(request.url())) {
+    KURL url(request.url());
+    if (url.hasRef())
+        url.removeRef();
+
+    if (ApplicationCacheGroup* group = cacheStorage().cacheGroupForURL(url)) {
         ASSERT(group->newestCache());
         ASSERT(!group->isObsolete());
         
@@ -98,7 +102,11 @@ ApplicationCache* ApplicationCacheGroup::fallbackCacheForMainRequest(const Resou
     if (!ApplicationCache::requestIsHTTPOrHTTPSGet(request))
         return 0;
 
-    if (ApplicationCacheGroup* group = cacheStorage().fallbackCacheGroupForURL(request.url())) {
+    KURL url(request.url());
+    if (url.hasRef())
+        url.removeRef();
+
+    if (ApplicationCacheGroup* group = cacheStorage().fallbackCacheGroupForURL(url)) {
         ASSERT(group->newestCache());
         ASSERT(!group->isObsolete());
 
@@ -108,7 +116,7 @@ ApplicationCache* ApplicationCacheGroup::fallbackCacheForMainRequest(const Resou
     return 0;
 }
 
-void ApplicationCacheGroup::selectCache(Frame* frame, const KURL& manifestURL)
+void ApplicationCacheGroup::selectCache(Frame* frame, const KURL& passedManifestURL)
 {
     ASSERT(frame && frame->page());
     
@@ -118,11 +126,15 @@ void ApplicationCacheGroup::selectCache(Frame* frame, const KURL& manifestURL)
     DocumentLoader* documentLoader = frame->loader()->documentLoader();
     ASSERT(!documentLoader->applicationCache());
 
-    if (manifestURL.isNull()) {
+    if (passedManifestURL.isNull()) {
         selectCacheWithoutManifestURL(frame);        
         return;
     }
-    
+
+    KURL manifestURL(passedManifestURL);
+    if (manifestURL.hasRef())
+        manifestURL.removeRef();
+
     ApplicationCache* mainResourceCache = documentLoader->mainResourceApplicationCache();
     
     if (mainResourceCache) {
@@ -131,7 +143,10 @@ void ApplicationCacheGroup::selectCache(Frame* frame, const KURL& manifestURL)
             mainResourceCache->group()->update(frame, ApplicationCacheUpdateWithBrowsingContext);
         } else {
             // The main resource was loaded from cache, so the cache must have an entry for it. Mark it as foreign.
-            ApplicationCacheResource* resource = mainResourceCache->resourceForURL(documentLoader->url());
+            KURL documentURL(documentLoader->url());
+            if (documentURL.hasRef())
+                documentURL.removeRef();
+            ApplicationCacheResource* resource = mainResourceCache->resourceForURL(documentURL);
             bool inStorage = resource->storageID();
             resource->addType(ApplicationCacheResource::Foreign);
             if (inStorage)
@@ -193,7 +208,9 @@ void ApplicationCacheGroup::finishedLoadingMainResource(DocumentLoader* loader)
 {
     ASSERT(m_pendingMasterResourceLoaders.contains(loader));
     ASSERT(m_completionType == None || m_pendingEntries.isEmpty());
-    const KURL& url = loader->url();
+    KURL url = loader->url();
+    if (url.hasRef())
+        url.removeRef();
 
     switch (m_completionType) {
     case None:
@@ -434,7 +451,9 @@ void ApplicationCacheGroup::didReceiveResponse(ResourceHandle* handle, const Res
     
     ASSERT(handle == m_currentHandle);
 
-    const KURL& url = handle->request().url();
+    KURL url(handle->request().url());
+    if (url.hasRef())
+        url.removeRef();
     
     ASSERT(!m_currentResource);
     ASSERT(m_pendingEntries.contains(url));
@@ -446,7 +465,7 @@ void ApplicationCacheGroup::didReceiveResponse(ResourceHandle* handle, const Res
         ASSERT(!(type & ApplicationCacheResource::Master));
 
     if (m_newestCache && response.httpStatusCode() == 304) { // Not modified.
-        ApplicationCacheResource* newestCachedResource = m_newestCache->resourceForURL(handle->request().url());
+        ApplicationCacheResource* newestCachedResource = m_newestCache->resourceForURL(url);
         if (newestCachedResource) {
             m_cacheBeingUpdated->addResource(ApplicationCacheResource::create(url, newestCachedResource->response(), type, newestCachedResource->data()));
             m_currentHandle->cancel();
@@ -467,7 +486,7 @@ void ApplicationCacheGroup::didReceiveResponse(ResourceHandle* handle, const Res
             // Skip this resource. It is dropped from the cache.
             m_currentHandle->cancel();
             m_currentHandle = 0;
-            m_pendingEntries.remove(handle->request().url());
+            m_pendingEntries.remove(url);
             // Load the next resource, if any.
             startLoadingEntry();
         } else {
@@ -531,7 +550,9 @@ void ApplicationCacheGroup::didFail(ResourceHandle* handle, const ResourceError&
     }
 
     unsigned type = m_currentResource ? m_currentResource->type() : m_pendingEntries.get(handle->request().url());
-    const KURL& url = handle->request().url();
+    KURL url(handle->request().url());
+    if (url.hasRef())
+        url.removeRef();
 
     ASSERT(!m_currentResource || !m_pendingEntries.contains(url));
     m_currentResource = 0;
@@ -820,6 +841,7 @@ void ApplicationCacheGroup::deliverDelayedMainResources()
 void ApplicationCacheGroup::addEntry(const String& url, unsigned type)
 {
     ASSERT(m_cacheBeingUpdated);
+    ASSERT(!KURL(url).hasRef());
     
     // Don't add the URL if we already have an master resource in the cache
     // (i.e., the main resource finished loading before the manifest).
